<resources>
    <string name="app_name">BMI</string>

    <string name="bmi_main_height_cm">Height [cm]:</string>
    <string name="bmi_main_mass_kg">Mass [kg]:</string>

    <string name="bmi_main_height_in">Height [in]:</string>
    <string name="bmi_main_mass_lb">Mass [lb]:</string>

    <string name="bmi_main_count">Count</string>
    <string name="bmi_main_range_underweight">UNDERWEIGHT</string>
    <string name="bmi_main_range_healthy">HEALTHY</string>
    <string name="bmi_main_range_overweight">OVERWEIGHT</string>
    <string name="bmi_main_range_obesity">OBESITY</string>
    <string name="bmi_main_range_severe_obesity">SEVERE OBESITY</string>


    <string name="bmi_menu_about_me">About me</string>
    <string name="bmi_menu_imperial_units">Change to imperial units</string>
    <string name="bmi_menu_si_units">Change to SI units</string>
    <string name="bmi_menu_history">History</string>

    <string name="bmi_about_title">About me</string>
    <string name="bmi_about_app_purpose">Hello! I am Red Power Ranger. This application was made to help my mates stay
        in shape.
    </string>
    <string name="bmi_about_hobby">When I am not fighting with the strength of evil I like programming in Ocaml and
        crocheting.
    </string>
    <string name="bmi_about_team_photo_descr">My Team Photo</string>

    <string name="bmi_info_title">Info</string>
    <string name="bmi_info_scale_description">Scale photo</string>
    <string name="bmi_info_bmi_value">Your BMI:</string>

    <string name="bmi_lorem_ipsum">Lorem ipsum dolor sit amet felis vitae libero. Maecenas nunc. Maecenas feugiat sit
        amet, consectetuer mollis. Suspendisse potenti. Cras enim pharetra eget, condimentum sit amet leo. Etiam nibh.
        Fusce tempor magna non leo lacus, faucibus scelerisque. Proin luctus. Sed ac turpis sed leo. Integer convallis
        accumsan, libero quis neque vel wisi. Vestibulum turpis tellus, quis neque. Phasellus semper nec, elementum.
    </string>
    <string name="bmi_main_range_picture_descr">Range picture</string>
    <string name="bmi_main_info_btn">Info button</string>
    <string name="bmi_history_title">History</string>
    <string name="bmi_history_bmi">BMI:</string>
    <string name="bmi_history_date">Date:</string>
    <string name="bmi_error_message">Provide valid value!</string>
</resources>
