<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AboutActivity"
        android:orientation="vertical"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/bmi_margin_top_layout"
        android:layout_marginBottom="@dimen/bmi_margin_bottom_layout"
        android:layout_marginLeft="@dimen/bmi_margins_side_layout"
        android:layout_marginRight="@dimen/bmi_margins_side_layout">

    <ImageView
            android:src="@drawable/power_rangers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/powerRangersIV"
            android:contentDescription="@string/bmi_about_team_photo_descr"
            app:srcCompat="@drawable/power_rangers"/>
    <TextView
            android:text="@string/bmi_about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/aboutTitleTV" android:textAlignment="center"
            android:textSize="@dimen/bmi_text_size_big" tools:text="@string/bmi_about_title"
            android:textStyle="bold" android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/bmi_about_margin_elements"/>
    <TextView
            android:text="@string/bmi_about_app_purpose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/appPurposeTV" android:textAlignment="center"
            android:textColor="@android:color/black" android:textSize="@dimen/bmi_text_size_small"
            android:layout_marginTop="@dimen/bmi_about_margin_elements"/>
    <TextView
            android:text="@string/bmi_about_hobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:textAlignment="center" android:id="@+id/myHobbyTV"
            android:textColor="@android:color/black" android:textSize="@dimen/bmi_text_size_small"
            android:layout_marginTop="@dimen/bmi_about_margin_elements"/>
</LinearLayout>