<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InfoActivity" android:layout_marginBottom="@dimen/bmi_margin_bottom_layout"
        android:layout_marginLeft="@dimen/bmi_margins_side_layout"
        android:layout_marginRight="@dimen/bmi_margins_side_layout"
        android:layout_marginTop="@dimen/bmi_margin_top_layout">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/scale" android:id="@+id/scaleIV"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true" android:contentDescription="@string/bmi_info_scale_description"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/bmiDescriptionET"
            android:text="@string/bmi_lorem_ipsum"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black" android:layout_toStartOf="@+id/scaleIV"
            android:layout_marginEnd="@dimen/bmi_info_margin_elements" android:textAlignment="center"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/bmiValueET"
            android:text="@string/bmi_info_bmi_value"
            android:textColor="@android:color/black" android:textSize="@dimen/bmi_text_size_medium"
            android:layout_below="@id/scaleIV"
            android:layout_alignParentEnd="true" android:layout_marginEnd="@dimen/bmi_info_margin_elements" android:layout_marginTop="@dimen/bmi_info_margin_elements"
            android:layout_marginStart="@dimen/bmi_info_margin_elements" android:layout_alignStart="@+id/scaleIV" android:textAlignment="center"
            android:textStyle="bold" android:paddingTop="@dimen/bmi_info_padding_elements"/>
</RelativeLayout>